# m2m-python-demo-app

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml
src/: auth.py  dependencies.py  main.py  protected_api_client.py  routes.py
